force-app/main/default/objects/Opportunity_Payment_Plan__c/Opportunity_Payment_Plan__c.object-meta.xml
<CustomObject>
    <label>Opportunity Payment Plan</label>
    <nameField>
        <label>Payment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Payment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>