force-app/main/default/objects/Opportunity_Payment_Plan__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payment Plan</relationshipLabel>
    <relationshipName>Opportunity_Payment_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>