force-app/main/default/objects/Opportunity_Payment_Plan__c/fields/UnitId__c.field-meta.xml
<CustomField>
    <fullName>UnitId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnitId</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Payment Plan</relationshipLabel>
    <relationshipName>Unit_Payment_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>